--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <ul class="footer-contato">
             <li>guipinheirob3@gmail.com</li>
             <li>+55 44 99850-1840</li>
-            <li><a href="https://www.instagram.com/guiilhermepb/">Github</a></li>
+            <li><a href="https://github.com/guilhermepbergamo">Github</a></li>
             <li><a href="https://www.linkedin.com/in/guilherme-pinheiro-bergamo/">LinkedIn</a></li>
             <li><a href="https://www.instagram.com/guiilhermepb/">@Instagram</a></li>
           </ul>
